--- a/style.css
+++ b/style.css
@@ -6,23 +6,21 @@ body {
   color: #665c54;
   font-family: PixelOperator;
   margin: 0;
-  display: flex;
-  justify-content: center;
 }
 
 .container {
   display: flex;
-  flex-direction: column; /* Organiza as divs em coluna */
-  align-items: center; /* Centraliza no eixo horizontal */
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  max-width: 800px; /* Ajuste conforme necessário */
+  max-width: 100%;
 }
 
 .main {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 10px 15px;
   min-width: fit-content;
   max-width: 80%;
   flex-wrap: wrap;
@@ -49,9 +47,9 @@ body {
 .content {
   background-color: #ebdbb2;
   padding: 20px;
-  margin-top: 20px; /* Espaço entre main e content */
-  width: 100%;
-  max-width: 800px; /* Mesmo tamanho da main */
+  margin: 20px auto; /* Mantém um pequeno espaço no topo e embaixo */
+  width: calc(100% - 100px); /* Mantém uma margem pequena nas laterais */
+  max-width: 100%; /* Permite que ocupe toda a tela */
   border: 2px solid #a89984;
   text-align: center;
 }
@@ -129,11 +127,13 @@ button:hover, .emailLink:hover {
 }
 
 ul {
-  list-style: none;         /* Remove a bolinha padrão */
-  padding: 10px;
+  list-style: none;
+  padding-left: 10px;
+  margin-left: 0;
 }
 
 li::before {
-  content: "▸ ";            /* Escolha seu símbolo “pixelado” favorito */
-  color: #665c54;           /* Cor do símbolo */
+  content: "\25B8 "; /* "▸" em Unicode */
+  color: #665c54;
+  padding-left: 5px;
 }
