--- a/style.css
+++ b/style.css
@@ -94,12 +94,16 @@ a:hover {
   background-color: #a89984;
   padding: 4px;
   cursor: pointer;
-  writing-mode: vertical-rl;
   font-weight: bold;
   border-radius: 10px 0 0 10px;
-  font-size: 12px;
-  line-height: 1;
+  font-size: 16px;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 
 
 .emailContainer {
